# Wheel_Robot

./: .gitignore  .gitmodules  LICENSE  README.md  README_cn.md
Document/: 3D - Structure-Diagram.pptx  PM3510.xlsx  ROS.docx  ROS.md
Hardware/: bom.xlsx  readme.md
Hardware/Encoder/: AS5147P.epro  PM3510-AS5147P.epro
Hardware/FOC/: ODrive.epro  ODrive_v1.epro  ProPrj_ODrive_2025-02-04.epro  ProPrj_ODrive_2025-02-05.epro  ProPrj_ODrive_2025-02-06.epro  ProPrj_ODrive_2025-02-07.epro  ProPrj_ODrive_2025-02-08.epro  ProPrj_ODrive_2025-02-09.epro  ProPrj_ODrive_2025-02-13.epro  ProPrj_ODrive_2025-02-18.epro  ProPrj_ODrive_2025-02-24.epro
Hardware/Link/: Link.epro
Hardware/ODrive/: ProPrj_ODrive_2024-12-08.epro  ProPrj_ODrive_2025-02-04.epro  ProPrj_ODrive_2025-02-05.epro
Model/: Wheel_Robot.SLDASM
Model/Case/: Case - Arm1-1-1.STL  Case - Arm1-1.STL  Case - Arm1-2-1.STL  Case - Arm1-2.STL  Case - Arm2-1-1.STL  Case - Arm2-1.STL  Case - Arm2-2-1.STL  Case - Arm2-2.STL  Case - Arm3-1-1.STL  Case - Arm3-1.STL  Case - Arm3-2-1.STL  Case - Arm3-2.STL  Case - Arm4-1-1.STL  Case - Arm4-1.STL  Case - Arm4-2-1.STL  Case - Arm4-2.STL  Case - Base2-2-1.STL  Case - Base2-2.STL  Case - Battery - Case-1.STL  Case - Battery-Case-1-1.STL  Case - Battery-Case-1.STL  Case.STEP  (+8 more)
Model/ROS/Wheel_Robot_Sim/: CMakeLists.txt  package.xml
Model/ROS/Wheel_Robot_Sim/launch/: display.launch  gazebo.launch
Model/ROS/Wheel_Robot_Sim/meshes/: left_wheel_link.STL  right_wheel_link.STL
Model/ROS/Wheel_Robot_Sim/urdf/: Wheel_Robot_Sim.csv  Wheel_Robot_Sim.urdf
Software/: Motor_Config.md
(+446 files in other folders)
